layer 0 and layer 1. lambda basic layer/environment and basic policies and roles

--- a/LambdaLayer.yaml
+++ b/LambdaLayer.yaml
@@ -5,6 +5,7 @@ Description: "first Layer to deploy codeBuild service"
 
 Resources:
 
+  #Lambda General Layer
   LambdaLayerParameter:
     Type: AWS::SSM::Parameter
     Properties:
