--- a/LambdaLayer.yaml
+++ b/LambdaLayer.yaml
@@ -1,6 +1,6 @@
 Transform: AWS::Serverless-2016-10-31
 
-Description: "First Layer to deploy codeBuild service"
+Description: "Lambda environment for CodeBuild and other functions"
 
 
 Resources:
