--- a/template.yaml
+++ b/template.yaml
@@ -19,14 +19,14 @@ Parameters:
     Type: String
 
 Resources:
-
+  ##Done
   LambdaLayerParameter:
     Type: AWS::SSM::Parameter
     Properties:
       Name: !Sub ${AWS::StackName}_lambda_layer
       Type: String
       Value: "NA"
-
+  ##Done
   StartCodeBuildProject:
     Type: Custom::StartCodeBuildProject
     Properties:
@@ -34,8 +34,7 @@ Resources:
       Update_lambda_layer: "yes"
     DependsOn:
       - "LambdaLayerParameter"
-
-
+  ##Done
   CodeBuildRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -50,7 +49,7 @@ Resources:
               - "sts:AssumeRole"
       ManagedPolicyArns:
           - !Ref BasicManagedPolicyforCodeBuild
-
+  ##Done
   BasicManagedPolicyforCodeBuild:
     Type: "AWS::IAM::ManagedPolicy"
     Properties:
@@ -78,8 +77,7 @@ Resources:
             Action:
               - ssm:PutParameter
             Resource: !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${LambdaLayerParameter}"
-
-
+  ##Done
   CodeBuildProject:
     Type: AWS::CodeBuild::Project
     Properties:
@@ -137,7 +135,6 @@ Resources:
 
       TimeoutInMinutes: 30
 
-
   BasicLambdaRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -179,7 +176,7 @@ Resources:
               - "s3:Put*"
               - "s3:Delete*"
             Resource: !Sub "arn:aws:s3:::${pS3BucketName}/*"
-
+  ##Done
   LambdaRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -195,7 +192,7 @@ Resources:
       ManagedPolicyArns:
           - !Ref ManagedPolicyforlambda
           - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
-
+  ##Done
   ManagedPolicyforlambda:
     Type: "AWS::IAM::ManagedPolicy"
     Properties:
@@ -383,198 +380,198 @@ Resources:
             Resource: '*'
 
 
-  MyStepFunction:
-    Type: AWS::StepFunctions::StateMachine
-    Properties:
-      TracingConfiguration:
-        Enabled: true
-      RoleArn: !GetAtt StepFunctionRole.Arn
-      DefinitionString: !Sub |
-        {
-          "Comment": "A HELLO World example of the Amazon States Language using Pass states...",
-          "StartAt": "Process Clients",
-          "States": {
-            "Process Clients": {
-              "Type": "Task",
-              "Resource": "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${RetrieveItemsFunction}",
-              "ResultPath": "$.clientList",
-              "Next": "Parallel Processing"
-            },
-            "Parallel Processing": {
-              "Type": "Map",
-              "ItemsPath": "$.clientList.clientList",
-              "ResultPath": "$.parallelResults",
-              "MaxConcurrency": 10,
-              "Iterator": {
-                  "StartAt": "Start ETL Job",
-                  "States": {
-                      "Start ETL Job": {
-                        "Type": "Task",
-                        "Resource": "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${StartETLFunction}",
-                        "Next": "ETL Job Success?",
-                        "ResultPath": "$.taskresult",
-                        "Catch": [
-                          {
-                            "ErrorEquals": [
-                              "States.ALL"
-                            ],
-                            "ResultPath": "$.error",
-                            "Next": "Handle Failure"
-                          }
-                        ]
-                      },
-                      "ETL Job Success?": {
-                        "Type": "Choice",
-                        "Choices": [
-                          {
-                            "Variable": "$.taskresult.Validation",
-                            "StringEquals": "SUCCESS",
-                            "Next": "Start Crawler For File"
-                          },
-                          {
-                            "Variable": "$.taskresult.Validation",
-                            "StringEquals": "FAILURE",
-                            "Next": "Handle Failure"
-                          }
-                        ]
-                      },
-                      "Handle Failure": {
-                        "Type": "Pass",
-                        "Parameters": {
-                          "StateMachineName.$": "$$.StateMachine.Name",
-                          "ExecutionName.$": "$$.Execution.Name",
-                          "ExecutionTime.$": "$$.Execution.StartTime",
-                          "ErrorMessage": "An error ocurred in the ETL Job",
-                          "FailedTaskName.$": "$$.State.Name"
-                        },
-                        "ResultPath": "$.taskresult",
-                        "Next": "Error Notification"
-                      },
-                      "Error Notification": {
-                        "Type": "Task",
-                        "Resource": "arn:aws:states:::aws-sdk:sns:publish",
-                        "Parameters": {
-                          "Message.$": "States.Format('Error: {}, StateMachine:{}, Name: {}, Time: {}, Task: {}', $.taskresult.ErrorMessage, $.taskresult.StateMachineName, $.taskresult.ExecutionName, $.taskresult.ExecutionTime ,$.taskresult.FailedTaskName)",
-                          "TopicArn": "${SNSTopic}"
-                        },
-                        "Next": "Fail"
-                      },
-                      "Start Crawler For File": {
-                        "Type": "Task",
-                        "ResultPath": "$.taskresult",
-                        "ResultSelector": {
-                          "cnt": "0",
-                          "crawler_name": "${CrawlPartitionedFile}"
-                        },
-                        "Resource": "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${StartCrawlerFunction}",
-                        "Parameters": {
-                          "Crawler_Name": "${CrawlPartitionedFile}"
-                        },
-                        "Retry": [
-                          {
-                            "ErrorEquals": [
-                              "CrawlerRunningException"
-                            ],
-                            "IntervalSeconds": 10,
-                            "MaxAttempts": 10,
-                            "BackoffRate": 2
-                          }
-                        ],
-                        "Catch": [
-                          {
-                            "ErrorEquals": [
-                              "CrawlerRunningException"
-                            ],
-                            "Comment": "Crawler is running for long time",
-                            "Next": "Handle Failure"
-                          },
-                          {
-                            "ErrorEquals": [
-                              "States.ALL"
-                            ],
-                            "Comment": "Error fall back",
-                            "ResultPath": "$.error-info",
-                            "Next": "Handle Failure"
-                          }
-                        ],
-                        "Next": "Crawler Status Check"
-                      },
-                      "Crawler Status Check": {
-                        "Type": "Task",
-                        "InputPath": "$.taskresult",
-                        "Resource": "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${CrawlerStatusCheckFunction}",
-                        "Next": "File Crawler Finished?",
-                        "ResultPath": "$.taskresult"
-                      },
-                      "File Crawler Finished?": {
-                        "Type": "Choice",
-                        "Choices": [
-                          {
-                            "Or": [
-                              {
-                                "Variable": "$.taskresult.Status",
-                                "StringEquals": "STOPPING"
-                              },
-                              {
-                                "Variable": "$.taskresult.Status",
-                                "StringEquals": "RUNNING"
-                              }
-                            ],
-                            "Next": "Raw File Crawler Wait"
-                          },
-                          {
-                            "Variable": "$.taskresult.Status",
-                            "StringEquals": "READY",
-                            "Next": "Handle Success"
-                          },
-                          {
-                            "Variable": "$.taskresult.Status",
-                            "StringEquals": "RETRYLIMITREACH",
-                            "Next": "Handle Failure"
-                          },
-                          {
-                            "Variable": "$.taskresult.Status",
-                            "StringEquals": "FAILED",
-                            "Next": "Handle Failure"
-                          }
-                        ],
-                        "Default": "Handle Failure"
-                      },
-                      "Raw File Crawler Wait": {
-                        "Type": "Wait",
-                        "Seconds": 30,
-                        "Next": "Crawler Status Check"
-                      },
-                      "Fail": {
-                        "Type": "Fail",
-                        "Cause": "validation failed",
-                        "Error": "ValidationError"
-                      },
-                      "Handle Success": {
-                        "Type": "Pass",
-                        "Parameters": {
-                          "StateMachineName.$": "$$.StateMachine.Name",
-                          "ExecutionName.$": "$$.Execution.Name",
-                          "ExecutionTime.$": "$$.Execution.StartTime"
-                        },
-                        "ResultPath": "$.taskresult",
-                        "Next": "Success Notification"
-                      },
-                      "Success Notification": {
-                          "Type": "Task",
-                          "Resource": "arn:aws:states:::aws-sdk:sns:publish",
-                          "Parameters": {
-                            "Message.$": "States.Format('Successful task. StateMachine: {}, Name: {}, Time: {}', $.taskresult.StateMachineName, $.taskresult.ExecutionName, $.taskresult.ExecutionTime)",
-                            "TopicArn": "${SNSTopic}"
-                          },
-                          "End": true
-                      }
-                    }
-                  },
-                  "End": true
-                }
-              }
-            }
+#  MyStepFunction:
+#    Type: AWS::StepFunctions::StateMachine
+#    Properties:
+#      TracingConfiguration:
+#        Enabled: true
+#      RoleArn: !GetAtt StepFunctionRole.Arn
+#      DefinitionString: !Sub |
+#        {
+#          "Comment": "A HELLO World example of the Amazon States Language using Pass states...",
+#          "StartAt": "Process Clients",
+#          "States": {
+#            "Process Clients": {
+#              "Type": "Task",
+#              "Resource": "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${RetrieveItemsFunction}",
+#              "ResultPath": "$.clientList",
+#              "Next": "Parallel Processing"
+#            },
+#            "Parallel Processing": {
+#              "Type": "Map",
+#              "ItemsPath": "$.clientList.clientList",
+#              "ResultPath": "$.parallelResults",
+#              "MaxConcurrency": 10,
+#              "Iterator": {
+#                  "StartAt": "Start ETL Job",
+#                  "States": {
+#                      "Start ETL Job": {
+#                        "Type": "Task",
+#                        "Resource": "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${StartETLFunction}",
+#                        "Next": "ETL Job Success?",
+#                        "ResultPath": "$.taskresult",
+#                        "Catch": [
+#                          {
+#                            "ErrorEquals": [
+#                              "States.ALL"
+#                            ],
+#                            "ResultPath": "$.error",
+#                            "Next": "Handle Failure"
+#                          }
+#                        ]
+#                      },
+#                      "ETL Job Success?": {
+#                        "Type": "Choice",
+#                        "Choices": [
+#                          {
+#                            "Variable": "$.taskresult.Validation",
+#                            "StringEquals": "SUCCESS",
+#                            "Next": "Start Crawler For File"
+#                          },
+#                          {
+#                            "Variable": "$.taskresult.Validation",
+#                            "StringEquals": "FAILURE",
+#                            "Next": "Handle Failure"
+#                          }
+#                        ]
+#                      },
+#                      "Handle Failure": {
+#                        "Type": "Pass",
+#                        "Parameters": {
+#                          "StateMachineName.$": "$$.StateMachine.Name",
+#                          "ExecutionName.$": "$$.Execution.Name",
+#                          "ExecutionTime.$": "$$.Execution.StartTime",
+#                          "ErrorMessage": "An error ocurred in the ETL Job",
+#                          "FailedTaskName.$": "$$.State.Name"
+#                        },
+#                        "ResultPath": "$.taskresult",
+#                        "Next": "Error Notification"
+#                      },
+#                      "Error Notification": {
+#                        "Type": "Task",
+#                        "Resource": "arn:aws:states:::aws-sdk:sns:publish",
+#                        "Parameters": {
+#                          "Message.$": "States.Format('Error: {}, StateMachine:{}, Name: {}, Time: {}, Task: {}', $.taskresult.ErrorMessage, $.taskresult.StateMachineName, $.taskresult.ExecutionName, $.taskresult.ExecutionTime ,$.taskresult.FailedTaskName)",
+#                          "TopicArn": "${SNSTopic}"
+#                        },
+#                        "Next": "Fail"
+#                      },
+#                      "Start Crawler For File": {
+#                        "Type": "Task",
+#                        "ResultPath": "$.taskresult",
+#                        "ResultSelector": {
+#                          "cnt": "0",
+#                          "crawler_name": "${CrawlPartitionedFile}"
+#                        },
+#                        "Resource": "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${StartCrawlerFunction}",
+#                        "Parameters": {
+#                          "Crawler_Name": "${CrawlPartitionedFile}"
+#                        },
+#                        "Retry": [
+#                          {
+#                            "ErrorEquals": [
+#                              "CrawlerRunningException"
+#                            ],
+#                            "IntervalSeconds": 10,
+#                            "MaxAttempts": 10,
+#                            "BackoffRate": 2
+#                          }
+#                        ],
+#                        "Catch": [
+#                          {
+#                            "ErrorEquals": [
+#                              "CrawlerRunningException"
+#                            ],
+#                            "Comment": "Crawler is running for long time",
+#                            "Next": "Handle Failure"
+#                          },
+#                          {
+#                            "ErrorEquals": [
+#                              "States.ALL"
+#                            ],
+#                            "Comment": "Error fall back",
+#                            "ResultPath": "$.error-info",
+#                            "Next": "Handle Failure"
+#                          }
+#                        ],
+#                        "Next": "Crawler Status Check"
+#                      },
+#                      "Crawler Status Check": {
+#                        "Type": "Task",
+#                        "InputPath": "$.taskresult",
+#                        "Resource": "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${CrawlerStatusCheckFunction}",
+#                        "Next": "File Crawler Finished?",
+#                        "ResultPath": "$.taskresult"
+#                      },
+#                      "File Crawler Finished?": {
+#                        "Type": "Choice",
+#                        "Choices": [
+#                          {
+#                            "Or": [
+#                              {
+#                                "Variable": "$.taskresult.Status",
+#                                "StringEquals": "STOPPING"
+#                              },
+#                              {
+#                                "Variable": "$.taskresult.Status",
+#                                "StringEquals": "RUNNING"
+#                              }
+#                            ],
+#                            "Next": "Raw File Crawler Wait"
+#                          },
+#                          {
+#                            "Variable": "$.taskresult.Status",
+#                            "StringEquals": "READY",
+#                            "Next": "Handle Success"
+#                          },
+#                          {
+#                            "Variable": "$.taskresult.Status",
+#                            "StringEquals": "RETRYLIMITREACH",
+#                            "Next": "Handle Failure"
+#                          },
+#                          {
+#                            "Variable": "$.taskresult.Status",
+#                            "StringEquals": "FAILED",
+#                            "Next": "Handle Failure"
+#                          }
+#                        ],
+#                        "Default": "Handle Failure"
+#                      },
+#                      "Raw File Crawler Wait": {
+#                        "Type": "Wait",
+#                        "Seconds": 30,
+#                        "Next": "Crawler Status Check"
+#                      },
+#                      "Fail": {
+#                        "Type": "Fail",
+#                        "Cause": "validation failed",
+#                        "Error": "ValidationError"
+#                      },
+#                      "Handle Success": {
+#                        "Type": "Pass",
+#                        "Parameters": {
+#                          "StateMachineName.$": "$$.StateMachine.Name",
+#                          "ExecutionName.$": "$$.Execution.Name",
+#                          "ExecutionTime.$": "$$.Execution.StartTime"
+#                        },
+#                        "ResultPath": "$.taskresult",
+#                        "Next": "Success Notification"
+#                      },
+#                      "Success Notification": {
+#                          "Type": "Task",
+#                          "Resource": "arn:aws:states:::aws-sdk:sns:publish",
+#                          "Parameters": {
+#                            "Message.$": "States.Format('Successful task. StateMachine: {}, Name: {}, Time: {}', $.taskresult.StateMachineName, $.taskresult.ExecutionName, $.taskresult.ExecutionTime)",
+#                            "TopicArn": "${SNSTopic}"
+#                          },
+#                          "End": true
+#                      }
+#                    }
+#                  },
+#                  "End": true
+#                }
+#              }
+#            }
 
   SNSTopic:
     Type: AWS::SNS::Topic
