--- a/master.yaml
+++ b/master.yaml
@@ -22,8 +22,13 @@ Resources:
       Parameters:
         pS3BucketName: !Ref pS3BucketName
 
-  QueueManagement:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      TemplateURL: 'https://code-diego-dsi.s3.amazonaws.com/QueueManagement.yaml'
-      Parameters: !Ref pEmailforNotification
+  SecurityParamsConnection:
+      Type: "AWS::CloudFormation::Stack"
+      Properties:
+        TemplateURL: ''
+
+#  QueueManagement:
+#    Type: "AWS::CloudFormation::Stack"
+#    Properties:
+#      TemplateURL: 'https://code-diego-dsi.s3.amazonaws.com/QueueManagement.yaml'
+#      Parameters: !Ref pEmailforNotification
