remove params in SecurityParamsConnection

--- a/master.yaml
+++ b/master.yaml
@@ -25,7 +25,7 @@ Resources:
   SecurityParamsConnection:
       Type: "AWS::CloudFormation::Stack"
       Properties:
-        TemplateURL: ''
+        TemplateURL: 'https://code-diego-dsi.s3.amazonaws.com/SecurityParamsConnection.yaml'
 
 #  QueueManagement:
 #    Type: "AWS::CloudFormation::Stack"
