--- a/master.yaml
+++ b/master.yaml
@@ -27,6 +27,12 @@ Resources:
       Properties:
         TemplateURL: 'https://code-diego-dsi.s3.amazonaws.com/SecurityParamsConnection.yaml'
 
+  CodeBuildRolesNPolicies:
+      Type: "AWS::CloudFormation::Stack"
+      DependsOn: SecurityParamsConnection
+      Properties:
+        TemplateURL: ''
+
 #  QueueManagement:
 #    Type: "AWS::CloudFormation::Stack"
 #    Properties:
